--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.24.1",
+    "axios": "^1.1.3",
     "next": "^13.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
