--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@tanstack/react-query": "^4.16.1",
+    "@tanstack/react-query-devtools": "^4.16.1",
     "antd": "^4.24.1",
     "axios": "^1.1.3",
     "next": "^13.0.3",
@@ -21,6 +23,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.27.0",
     "eslint-config-airbnb": "^19.0.4",
