--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,10 @@
     "react-dom": "^18.2.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.27.0",
     "eslint-config-airbnb": "^19.0.4",
