--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0"
   },
